# libmate

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  ast.c  ast.h  block_handler.c  handler.c  handler.h  lexer.h  lexer.l  main.cpp  mate.h  parser.y  processor.cpp  processor.hpp  processor_require.cpp  strbuffer.c
.github/workflows/: cmake.yml
